# i-api

./: .gitignore  .prettierrc  AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: test-tab-switch.js
docs/: development-plan.md  environment-variables.md  installer-optimization.md  logo-guidelines.md  requirements.md
scripts/: check-tauri-config.js  generate-apple-icon.js  generate-dmg-background.js  generate-ico-icns.js  generate-installer-assets.js  generate-logos.js  generate-nsis-images.js  generate-tauri-icons.js
src/: AGENTS.md  App.vue  main.ts  monaco-setup.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  secure_storage.rs
src-tauri/src/curl/: mod.rs
src-tauri/src/database/: AGENTS.md  mod.rs  optimizer.rs  repository.rs
src-tauri/src/http/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/openapi/: mod.rs
src-tauri/src/script/: mod.rs
src/composables/: AGENTS.md  useEditorOptimizer.ts  useI18n.ts  useMonacoEditor.ts  useSecretStorage.ts  useShortcuts.ts  useSidebarDrag.ts  useStreamedRequest.ts  useTabDrag.ts  useUrlAutocomplete.ts  useVariableAutocomplete.ts
src/locales/: en-US.ts  index.ts  zh-CN.ts
src/router/: index.ts
src/stores/: AGENTS.md  environment.ts  history.ts  index.ts  request.ts  settings.ts
(+62 files in other folders)
