[package]
name = "iapi"
version = "0.1.0"
description = "轻量、快速、中文的 API 测试工具"
authors = ["iApi Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "iapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
rusqlite = { version = "0.33", features = ["bundled"] }
r2d2 = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
urlencoding = "2.1"
base64 = "0.22"
serde_yaml = "0.9"
once_cell = "1.19"
keyring = "3"
futures-util = "0.3"
dashmap = "6.1"
md5 = "0.7"
